# euclid_squad_3_SDR-Agent-System

./: .env.example  HANDOFF.md  README.md  main.py  pyproject.toml  run_email_monitor.py  setup_webhook.py  test_email_monitor.py
apps/api/: README.md  main.py
config/: settings.py
db/: seed.sql
email_monitor/: __init__.py  agent.py  email_response.py  email_sender.py  intent_extractor.py  response_evaluator.py  server.py  webhook_manager.py
outreach/: gradio_interface.py
scripts/: run_outreach.py  seed_contacts.py
services/: lead_service.py
tests/: test_guardrails.py
tools/: __init__.py  campaign_tools.py  email_tools.py  lead_tools.py  meeting_tools.py  notify_staff.py  send_email.py
utils/: db_connection.py
