[project]
name = "agent-outreach-platform"
version = "1.0.0"
description = "Agent-driven outreach and qualification platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "gradio>=5.22.0",
    "openai-agents>=0.13.2",
    "agentmail",
    "openai>=1.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
